[metadata]
name = pysshconfig
version = 0.0.2
author = Francesc Zacarias
author_email = fzacarias3k@gmail.com
description = Extremely simple, pure-python library to parse ssh_config files.
license = LGPL
license_files = COPYING,COPYING.LESSER
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zfrank/pysshconfig
platforms = Any
project_urls =
    Bug Tracker = https://github.com/zfrank/pysshconfig/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
py_modules = pysshconfig

